got background moving

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
-    <script src="game.js"></script>
+    <script src="jquery-1.4.2.min.js"></script>
+    <script src="lib.js"></script>
     <style>
       #canvas { position:absolute; border:1px solid black; top:20px; left:20px; }
     </style>
