beginnings of tiles

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <script src="jquery-1.4.2.min.js"></script>
     <script src="lib.js"></script>
     <style>
-      #canvas { position:absolute; border:1px solid black; top:20px; left:20px; }
+      #canvas { position:absolute; border:1px solid black; top:20px; left:20px; background:#cc9;}
     </style>
   </head>
   <body>
