--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
       #canvas-mask { position:relative; border:1px solid black; top:20px; left:20px; width:900px; height:420px; z-index:30; overflow:hidden; }
       #background { position:relative; background:#cc9; z-index:10; width:900px; height:420px; overflow:hidden; }
       .tile { position:absolute; width:60; height:60; background-color:#000; background-image:url(./tiles.png); z-index:5; background-position:60 0px; }
-      #framerate { position:absolute; color:#FFF; z-index:50; right:5px; top:5px; }
+      #framerate { position:absolute; color:#000; z-index:50; right:5px; top:5px; display:none; }
+      #pause { position:absolute; background-color:#FFF; color:#000; z-index:50; left:45%; bottom:50%; padding:8px; font-weight:bold; display:none; }
+      .active { display:block !important; }
     </style>
     <script data-main="main" src="requireplugins-jquery-1.4.3.js"></script>
   </head>
@@ -14,6 +16,7 @@
       <canvas id="canvas" width="900" height="420"></canvas>
       <div id="background"></div>
       <div id="framerate"></div>
+      <div id="pause">PAUSE</div>
     </div>
   </body>
 </html>
