first pass with using an image map

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       #framerate { position:absolute; color:#000; z-index:50; right:5px; top:5px; display:none; }
       #pause { position:absolute; background-color:#FFF; color:#000; z-index:50; left:45%; bottom:50%; padding:8px; font-weight:bold; display:none; }
       .active { display:block !important; }
+      #leveldata { display:block }
     </style>
     <script data-main="main" src="requireplugins-jquery-1.4.3.js"></script>
   </head>
