more map-related loading work
using json to pass to webworker
pulling out strips so the map worker can construct more stuff

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         filter: flipv; /*IE*/
       }
     </style>
+    <script src="json2.js"></script>
     <script src="underscore-min.js"></script>
     <script data-main="main" src="requireplugins-jquery-1.4.3.js"></script>
   </head>
