updated tiles, background color must have been reset

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <style>
       #canvas { position:absolute; z-index:20; }
       #canvas-mask { position:relative; border:1px solid black; top:20px; left:20px; width:900px; height:420px; z-index:30; overflow:hidden; }
-      #background { position:relative; background:#A28026; z-index:10; width:900px; height:420px; overflow:hidden; }
+      #background { position:relative; background:#93803A; z-index:10; width:900px; height:420px; overflow:hidden; }
       .tile { position:absolute; width:60; height:60; background-color:#000; background-image:url(./assets/tiles.png); z-index:5; background-position:60 0px; }
       #framerate { position:absolute; color:#000; z-index:50; right:5px; top:5px; display:none; }
       #pause { position:absolute; background-color:#FFF; color:#000; z-index:50; left:45%; bottom:50%; padding:8px; font-weight:bold; display:none; }
