tile rotation, new intersection map

--- a/index.html
+++ b/index.html
@@ -25,6 +25,18 @@
         transform: scaleY(-1);
         filter: flipv; /*IE*/
       }
+      .rotate-90 {
+        -moz-transform: rotate(90deg);
+        -webkit-transform: rotate(90deg);
+      }
+      .rotate-180 {
+        -moz-transform: rotate(180deg);
+        -webkit-transform: rotate(180deg);
+      }
+      .rotate-270 {
+        -moz-transform: rotate(270deg);
+        -webkit-transform: rotate(270deg);
+      }
     </style>
     <script src="json2.js"></script>
     <script src="underscore-min.js"></script>
