added progress to editor

--- a/editor/index.html
+++ b/editor/index.html
@@ -33,6 +33,7 @@
 	  <input type="button" id="save-button" value="Save"/>
 	</li>
       </ul>
+      <div id="progress"><div id="progress-slider"></div></div>
     </div>
     <div id="left">
       <div id="tile-list">
