now using separate require and jquery libs

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
     <link rel="stylesheet" type="text/css" media="screen" href="game.css">
     <script src="json2.js"></script>
     <script src="underscore-min.js"></script>
-    <script data-main="main" src="requireplugins-jquery-1.4.3.js"></script>
+    <script src="jquery-1.5.1.min.js"></script>
+    <script data-main="main" src="require.js"></script>
   </head>
   <body>
     <div id="canvas-mask">
