moved editor out of /editor because requirejs is lame

--- a/editor.html
+++ b/editor.html
@@ -1,11 +1,12 @@
 <html>
   <head>
     <title>Editor</title>
-    <link rel="stylesheet" type="text/css" media="screen" href="../game.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="game.css">
     <link rel="stylesheet" type="text/css" media="screen" href="editor.css">
-    <script src="../json2.js"></script>
-    <script src="../underscore-min.js"></script>
-    <script data-main="editor/editor" src="../requireplugins-jquery-1.4.3.js"></script>
+    <script src="json2.js"></script>
+    <script src="underscore-min.js"></script>
+    <script src="jquery-1.5.1.min.js"></script>
+    <script data-main="editor" src="require.js"></script>
     <script src="jquery.lightbox_me.js"></script>
   </head>
   <body>
