rendering sprite list in the editor

--- a/editor.html
+++ b/editor.html
@@ -46,6 +46,8 @@
 	</div>
       </div>
     </div>
+    <ul id="sprite-list">
+    </ul>
     <div id="load">
       <input type="file" id="load-file"/>
       <!-- <input type="button" id="load-file-button" value="Load" class="close"/> -->
