--- a/editor.html
+++ b/editor.html
@@ -1,13 +1,13 @@
 <html>
   <head>
     <title>Editor</title>
-    <link rel="stylesheet" type="text/css" media="screen" href="game.css">
-    <link rel="stylesheet" type="text/css" media="screen" href="editor.css">
-    <script src="json2.js"></script>
-    <script src="underscore-min.js"></script>
-    <script src="jquery-1.5.1.min.js"></script>
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/game.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/editor.css">
+    <script src="lib/json2.js"></script>
+    <script src="lib/underscore-min.js"></script>
+    <script src="lib/jquery-1.5.1.min.js"></script>
+    <script src="lib/jquery.lightbox_me.js"></script>
     <script data-main="editor" src="require.js"></script>
-    <script src="jquery.lightbox_me.js"></script>
   </head>
   <body>
     <div id="top">
