--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" media="screen" href="game.css">
-    <script src="json2.js"></script>
-    <script src="underscore-min.js"></script>
-    <script src="jquery-1.5.1.min.js"></script>
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/game.css">
+    <script src="lib/json2.js"></script>
+    <script src="lib/underscore-min.js"></script>
+    <script src="lib/jquery-1.5.1.min.js"></script>
     <script data-main="main" src="require.js"></script>
   </head>
   <body>
