show mouse coord when over the map
now calculating map mask offset correctly, setting sprite position
correctly too

--- a/editor.html
+++ b/editor.html
@@ -29,6 +29,9 @@
 	    <option value="3">270</option>
 	  </select>
 	</li>
+	<li id="coord-display">
+          (<span id="x-coord">0</span>, <span id="y-coord">0</span>)
+	</li>
 	<li>
 	  <input type="button" id="load-button" value="Load"/>
 	  <input type="button" id="save-button" value="Save"/>
