--- a/editor.html
+++ b/editor.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/game.css">
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/editor.css">
     <script src="lib/json2.js"></script>
-    <script src="lib/underscore-min.js"></script>
+    <script src="lib/underscore.js"></script>
     <script src="lib/jquery-1.5.1.min.js"></script>
     <script src="lib/jquery.lightbox_me.js"></script>
     <script data-main="editor" src="require.js"></script>
