--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/game.css">
     <script src="lib/json2.js"></script>
-    <script src="lib/underscore-min.js"></script>
+    <script src="lib/underscore.js"></script>
     <script src="lib/jquery-1.5.1.min.js"></script>
     <script data-main="main" src="require.js"></script>
   </head>
