--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="canvas-mask">
+      <canvas id="hud-canvas" width="900" height="600"></canvas>
       <canvas id="sky-canvas" width="900" height="600"></canvas>
       <canvas id="canvas" width="900" height="600"></canvas>
       <div id="background"></div>
