LifeMeter first pass

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <div id="background"></div>
       <div id="framerate"></div>
       <div id="pause">PAUSE</div>
+      <div id="life"></div>
       <div id="progress"><div id="progress-slider"></div></div>
     </div>
   </body>
