--- a/index.html
+++ b/index.html
@@ -7,7 +7,43 @@
     <script data-main="main" src="require.js"></script>
   </head>
   <body>
-    <div id="canvas-mask">
+    <div id="canvas-mask" class="crosshair">
+      <table id="inventory">
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td rowspan="3">Wield</td>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+      </table>
       <canvas id="hud-canvas" width="900" height="600"></canvas>
       <canvas id="sky-canvas" width="900" height="600"></canvas>
       <canvas id="canvas" width="900" height="600"></canvas>
