inventory table is now generated
expanding Inventory object to mean all inventories, cars, buildings, etc

--- a/index.html
+++ b/index.html
@@ -8,42 +8,7 @@
   </head>
   <body>
     <div id="canvas-mask" class="crosshair">
-      <table id="inventory">
-        <tr>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td rowspan="3">Wield</td>
-        </tr>
-        <tr>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-        </tr>
-        <tr>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-        </tr>
-      </table>
+      <div id="dude-inventory"></div>
       <canvas id="hud-canvas" width="900" height="600"></canvas>
       <canvas id="sky-canvas" width="900" height="600"></canvas>
       <canvas id="canvas" width="900" height="600"></canvas>
