inventory drag and drop is kind of working

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <script src="lib/json2.js"></script>
     <script src="lib/underscore.js"></script>
     <script src="lib/jquery-1.6.1.min.js"></script>
+    <script src="lib/jquery-ui-1.8.13.custom.js"></script>
     <script data-main="main" src="require.js"></script>
   </head>
   <body>
