don't point dude's arm when over inventory
also don't allow firing

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
   </head>
   <body>
     <div id="container">
-      <div id="canvas-mask" class="crosshair">
+      <div id="canvas-mask">
         <div id="dude-inventory"></div>
+        <div id="click-overlay" class="crosshair"></div>
         <canvas id="sky-canvas" width="900" height="600"></canvas>
         <canvas id="canvas" width="900" height="600"></canvas>
         <div id="background"></div>
