--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div id="container">
       <div id="canvas-mask">
         <div id="dude-inventory"></div>
+        <div id="other-inventory"></div>
         <div id="click-overlay" class="crosshair"></div>
         <canvas id="sky-canvas" width="900" height="600"></canvas>
         <canvas id="canvas" width="900" height="600"></canvas>
