--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <div id="canvas-mask">
         <div id="dude-inventory"></div>
         <div id="other-inventory"></div>
+        <canvas id="fuel-gauge" width="120" height="60"></canvas>
         <div id="click-overlay" class="crosshair"></div>
         <canvas id="sky-canvas" width="900" height="600"></canvas>
         <canvas id="canvas" width="900" height="600"></canvas>
