--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
         <div id="click-overlay" class="crosshair"></div>
         <canvas id="sky-canvas" width="900" height="600"></canvas>
-        <div id="canvas"></div>
+        <div id="sprites"></div>
         <div id="background"></div>
         <div id="framerate"></div>
         <div id="life"></div>
