render building outlines

--- a/editor.html
+++ b/editor.html
@@ -45,8 +45,10 @@
     </div>
     <div id="right">
       <div id="map-mask">
-	<div id="map">
-	</div>
+        <div id="map">
+          <canvas id="map-canvas" width="3840", height="3840">
+          </canvas>
+        </div>
       </div>
     </div>
     <ul id="sprite-list">
