first attempt at drawing building edges

--- a/editor.html
+++ b/editor.html
@@ -29,6 +29,9 @@
 	    <option value="3">270</option>
 	  </select>
 	</li>
+	<li>
+          <input type="button" id="new-building-button" value="New Building"/>
+	</li>
 	<li id="coord-display">
           (<span id="x-coord">0</span>, <span id="y-coord">0</span>)
 	</li>
@@ -59,6 +62,11 @@
     </div>
     <div id="save">
       <textarea id="save-text" readonly></textarea>
+    </div>
+    <div id="new-building">
+      <h3>Building Name:</h3>
+      <input type="text" id="new-building-name" value=""/>
+      <input type="button" id="new-building-ok" value="OK"/>
     </div>
   </body>
 </html>
