display the tile number the mouse if over

--- a/editor.html
+++ b/editor.html
@@ -35,6 +35,7 @@
 	<li id="coord-display">
           (<span id="x-coord">0</span>, <span id="y-coord">0</span>)
 	</li>
+	<li id="tile-number-display"></li>
 	<li>
 	  <input type="button" id="load-button" value="Load"/>
 	  <input type="button" id="save-button" value="Save"/>
