--- a/editor.html
+++ b/editor.html
@@ -32,6 +32,9 @@
 	<li>
           <input type="button" id="new-building-button" value="New Building"/>
 	</li>
+	<li>
+          <input type="button" id="add-entrance-button" value="Add Entrance" disabled="disabled"/>
+	</li>
 	<li id="coord-display">
           (<span id="x-coord">0</span>, <span id="y-coord">0</span>)
 	</li>
