--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <div id="sprites"></div>
         <div id="background"></div>
         <div id="framerate"></div>
+        <div id="distance"></div>
         <div id="life"></div>
         <div id="progress"><div id="progress-slider"></div></div>
       </div>
