add game over screen

--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
           <div id="pause">PAUSE</div>
         </div>
       </div>
+      <div id="game-over-overlay">
+        <div id="game-over-text-container">
+          <div id="game-over">GAME OVER</div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
