--- a/editor.html
+++ b/editor.html
@@ -49,6 +49,8 @@
     <div id="left">
       <div id="tile-list">
       </div>
+      <select id="archetype-list" size="10">
+      </select>
     </div>
     <div id="right">
       <div id="map-mask">
