--- a/index.html
+++ b/index.html
@@ -22,8 +22,11 @@
         <canvas id="sky-canvas" width="900" height="600"></canvas>
         <div id="sprites"></div>
         <div id="background"></div>
-        <div id="framerate"></div>
-        <div id="distance"></div>
+        <div id="lower-right">
+	  <span id="time"></span>
+	  <span id="distance"></span>
+	  <span id="framerate"></span>
+	</div>
         <div id="life"></div>
         <div id="progress"><div id="progress-slider"></div></div>
       </div>
