--- a/index.html
+++ b/index.html
@@ -23,9 +23,14 @@
         <div id="sprites"></div>
         <div id="background"></div>
         <div id="lower-right">
-	  <span id="time"></span>
-	  <span id="distance"></span>
-	  <span id="framerate"></span>
+	  <span id="time">
+	    <span class="hours">&nbsp;</span>
+	    <span class="colon">&nbsp;</span>
+	    <span class="minutes">&nbsp;</span>
+	    <span class="meridiem">&nbsp;</span>
+	  </span>
+	  <span id="distance">&nbsp;</span>
+	  <span id="framerate">&nbsp;</span>
 	</div>
         <div id="life"></div>
         <div id="progress"><div id="progress-slider"></div></div>
