moved lib to vendor

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/game.css">
-    <script src="lib/json2.js"></script>
-    <script src="lib/underscore.js"></script>
-    <script src="lib/jquery-1.6.1.min.js"></script>
-    <script src="lib/jquery-ui-1.8.13.custom.js"></script>
-    <script src="lib/jquery.transform-0.9.3.js"></script>
+    <script src="vendor/json2.js"></script>
+    <script src="vendor/underscore.js"></script>
+    <script src="vendor/jquery-1.6.1.min.js"></script>
+    <script src="vendor/jquery-ui-1.8.13.custom.js"></script>
+    <script src="vendor/jquery.transform-0.9.3.js"></script>
     <script data-main="main" src="require.js"></script>
   </head>
   <body>
