--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script src="vendor/jquery-1.6.1.min.js"></script>
     <script src="vendor/jquery-ui-1.8.13.custom.js"></script>
     <script src="vendor/jquery.transform-0.9.3.js"></script>
-    <script data-main="main" src="require.js"></script>
+    <script data-main="main" src="vendor/require.js"></script>
   </head>
   <body>
     <div id="container">
