move editor into its own directory

--- a/editor.html
+++ b/editor.html
@@ -3,11 +3,11 @@
     <title>Editor</title>
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/game.css">
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/editor.css">
-    <script src="lib/json2.js"></script>
-    <script src="lib/underscore.js"></script>
-    <script src="lib/jquery-1.6.1.min.js"></script>
-    <script src="lib/jquery.lightbox_me.js"></script>
-    <script data-main="editor" src="require.js"></script>
+    <script src="vendor/json2.js"></script>
+    <script src="vendor/underscore.js"></script>
+    <script src="vendor/jquery-1.6.1.min.js"></script>
+    <script src="vendor/jquery.lightbox_me.js"></script>
+    <script data-main="editor/editor" src="vendor/require.js"></script>
   </head>
   <body>
     <div id="top">
