--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <script src="vendor/json2.js"></script>
     <script src="vendor/underscore.js"></script>
     <script src="vendor/jquery-1.7.1.min.js"></script>
-    <script src="vendor/jquery-ui-1.8.13.custom.js"></script>
+    <script src="vendor/jquery-ui-1.8.16.custom.min.js"></script>
     <script src="vendor/jquery.transform-0.9.3.js"></script>
     <script data-main="lib/main" src="vendor/require.js"></script>
   </head>
