Main needs to be capitalized

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script src="vendor/jquery-1.7.1.min.js"></script>
     <script src="vendor/jquery-ui-1.8.16.custom.min.js"></script>
     <script src="vendor/jquery.transform-0.9.3.js"></script>
-    <script data-main="lib/main" src="vendor/require.js"></script>
+    <script data-main="lib/Main" src="vendor/require.js"></script>
   </head>
   <body>
     <div id="container">
