add Clear Game as a link

--- a/index.html
+++ b/index.html
@@ -46,5 +46,10 @@
         </div>
       </div>
     </div>
+    <br/>
+    <br/>
+    <br/>
+    <br/>
+    <a href="javascript:localStorage.clear();">Clear Game</a>
   </body>
 </html>
