--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <h4>Saving:</h4>
       <ul>
         <li>The game automatically saves if you quit your browser or close the tab the game is in. Next time you go to the game page the your last game will be restored.</li>
-        <li>Click here to clear your current game: <a href="javascript:localStorage.clear();">Clear Game</a></li>
+        <li>Click here to clear your current game: <a href="javascript:localStorage.clear(); window.location.reload();">Clear Game</a></li>
         <li>If you die your game will be cleared :)</li>
       </ul>
 
