--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <div id="fuel-gauge">
           <div id="fuel-gauge-needle"></div>
         </div>
-        <div id="check-engine-light">
-        </div>
+        <div id="check-engine-light"></div>
+        <div id="low-fuel-light"></div>
         <div id="click-overlay" class="crosshair"></div>
         <canvas id="sky-canvas" width="900" height="600"></canvas>
         <div id="sprites"></div>
