first steps for getting a replay button

--- a/index.html
+++ b/index.html
@@ -36,13 +36,16 @@
         <div id="progress"><div id="progress-slider"></div></div>
       </div>
       <div id="pause-overlay">
-        <div id="pause-text-container">
+        <div class="centering-container">
           <div id="pause">PAUSE</div>
         </div>
       </div>
       <div id="game-over-overlay">
-        <div id="game-over-text-container">
+        <div class="centering-container">
           <div id="game-over">GAME OVER</div>
+        </div>
+        <div class="centering-container">
+          <a href="#" id="play-again">Play Again</a>
         </div>
       </div>
     </div>
