--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         </div>
         <div id="life"></div>
         <div id="progress"><div id="progress-slider"></div></div>
+        <div id="nuke"></div>
       </div>
       <div id="pause-overlay">
         <div class="centering-container">
