new main/pause screen

--- a/index.html
+++ b/index.html
@@ -41,15 +41,21 @@
           <span id="framerate">&nbsp;</span>
         </div>
         <div id="life"></div>
-        <div id="progress"><div id="progress-slider"></div></div>
         <div id="nuke"></div>
       </div>
-      <div id="pause-overlay">
-        <div class="centering-container">
-          <div id="pause">PAUSE</div>
-        </div>
+      <div id="loading-screen" class="overlay">
+        <div id="progress"><div id="progress-slider"></div></div>
       </div>
-      <div id="game-over-overlay">
+      <div id="main-screen" class="overlay">
+        <h1 id="title">DEAD VALLEY</h1>
+        <ul class="centering-container">
+          <li id="new-game">New Game</li>
+          <li id="resume-game">Resume</li>
+          <li id="instructions">Instructions</li>
+          <li id="about">About</li>
+        </ul>
+      </div>
+      <div id="game-over-screen" class="overlay">
         <div class="centering-container">
           <div id="game-over">GAME OVER</div>
         </div>
@@ -58,8 +64,6 @@
         </div>
       </div>
     </div>
-
-    <a href="help.html" target="_blank">Help!</a>
 
   </body>
 </html>
