make background fade in/out separate

--- a/index.html
+++ b/index.html
@@ -47,13 +47,15 @@
           <div id="progress"><div id="progress-slider"></div></div>
         </div>
         <div id="main-screen" class="overlay">
-          <h1 id="title">DEAD VALLEY</h1>
-          <ul class="centering-container">
-            <li id="new-game">New Game</li>
-            <li id="resume-game">Resume</li>
-            <li id="instructions">Instructions</li>
-            <li id="about">About</li>
-          </ul>
+          <div id="main-content">
+            <h1 id="title">DEAD VALLEY</h1>
+            <ul class="centering-container">
+              <li id="new-game">New Game</li>
+              <li id="resume-game">Resume</li>
+              <li id="instructions">Instructions</li>
+              <li id="about">About</li>
+            </ul>
+          </div>
         </div>
         <div id="game-over-screen" class="overlay">
           <div class="centering-container">
