keyboard controls for the menu

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
           <div id="main-content">
             <h1 id="title">DEAD VALLEY</h1>
             <ul class="centering-container">
-              <li id="new-game">New Game</li>
               <li id="resume-game">Resume</li>
+              <li id="new-game" class="selected">New Game</li>
               <li id="instructions">Instructions</li>
               <li id="about">About</li>
             </ul>
