can load saved game

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <h1 id="title">DEAD VALLEY</h1>
             <ul class="centering-container">
               <li id="resume-game">Resume</li>
-              <li id="new-game" class="selected">New Game</li>
+              <li id="new-game">New Game</li>
               <li id="instructions">Instructions</li>
               <li id="about">About</li>
             </ul>
