check for feature support

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="vendor/jquery-ui-1.8.16.custom.min.js"></script>
     <script src="vendor/jquery.transform-0.9.3.js"></script>
     <script src="vendor/sound.js"></script>
+    <script src="vendor/modernizr.js"></script>
     <script data-main="lib/Main" src="vendor/require.js"></script>
   </head>
   <body>
