sound on/off toggle switch

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               <li id="resume-game">Resume</li>
               <li id="new-game">New Game</li>
               <li id="instructions">Instructions</li>
-              <li id="about">About</li>
+              <li id="sound">Sound:<div class="choice"><span class="on">ON</span><span>OFF</span></div></li>
             </ul>
           </div>
         </div>
