put a bullet before back

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </div>
         <div id="help" class="overlay">
           <div id="help-content">
-            <div class="back">Back</div>
+            <div class="back">&bull;&nbsp;Back</div>
             <h4>Premise:</h4>
             <p>
             Zombies have taken over Dead Valley! You've been hiding out in the basement of a farmhouse and surviving on canned beans hoping that the National Guard will come save you.
