--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <h4>Premise:</h4>
             <p>
             Zombies have taken over Dead Valley! You've been hiding out in the basement of a farmhouse and surviving on canned beans hoping that the National Guard will come save you.
-            One morning the radio announces that in exactly three days all of Dead Valley will be bombed to wipe out the Zombie infestation. You have three days to reach the minimum safe distance of 150 miles from the epicenter -- which happens to be just down the street. Better get cracking!
+            One morning the radio announces that in exactly three days all of Dead Valley will be bombed to wipe out the Zombie infestation. You have three days to reach the minimum safe distance of 150 miles -- better get cracking!
             <p>
 
             <div id="figures">
