--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
           <ul class="centering-container">
             <li id="resume-game">Resume</li>
             <li id="new-game">New Game</li>
+            <li id="time-challenge">Time Challenge</li>
             <li id="instructions">Instructions</li>
             <li id="sound">Sound:<div class="choice"><span class="on">ON</span><span>OFF</span></div></li>
           </ul>
