add graphic to main menu

--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
       <div id="main-screen" class="overlay">
         <div id="main-content">
           <h1 id="title">DEAD VALLEY</h1>
-          <ul class="centering-container">
+	  <img id="graphic" src="assets/graphic.png"></img>
+          <ul id="menu">
             <li id="resume-game">Resume</li>
             <li id="new-game">New Game</li>
             <li id="time-challenge">Time Challenge</li>
